--- a/yodoo_apps_sale/i18n/ru.po
+++ b/yodoo_apps_sale/i18n/ru.po
@@ -1,6 +1,6 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-#	* yodoo_apps_sale
+# 	* yodoo_apps_sale
 #
 msgid ""
 msgstr ""
@@ -10,6 +10,7 @@ msgstr ""
 "PO-Revision-Date: 2022-05-01 19:54+0000\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
@@ -97,4 +98,3 @@ msgstr ""
 #: model:ir.model.fields,field_description:yodoo_apps_sale.field_res_config_settings__yodoo_default_product_category_id
 msgid "Yodoo Default Product Category"
 msgstr ""
-
