--- a/yodoo_apps_sale/i18n/yodoo_apps_sale.pot
+++ b/yodoo_apps_sale/i18n/yodoo_apps_sale.pot
@@ -1,14 +1,12 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-#	* yodoo_apps_sale
+# 	* yodoo_apps_sale
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 13.0+e\n"
+"Project-Id-Version: Odoo Server 13.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-02-16 18:58+0000\n"
-"PO-Revision-Date: 2020-02-16 18:58+0000\n"
-"Last-Translator: <>\n"
+"Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -97,4 +95,3 @@ msgstr ""
 #: model:ir.model.fields,field_description:yodoo_apps_sale.field_res_config_settings__yodoo_default_product_category_id
 msgid "Yodoo Default Product Category"
 msgstr ""
-
