--- a/yodoo_apps_database/i18n/yodoo_apps_database.pot
+++ b/yodoo_apps_database/i18n/yodoo_apps_database.pot
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 14.0\n"
+"Project-Id-Version: Odoo Server 15.0\n"
 "Report-Msgid-Bugs-To: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -274,7 +274,6 @@ msgid "Direct Dependency of"
 msgstr ""
 
 #. module: yodoo_apps_database
-#: model:ir.model.fields,field_description:yodoo_apps_database.field_res_config_settings__display_name
 #: model:ir.model.fields,field_description:yodoo_apps_database.field_yodoo_module__display_name
 #: model:ir.model.fields,field_description:yodoo_apps_database.field_yodoo_module_author__display_name
 #: model:ir.model.fields,field_description:yodoo_apps_database.field_yodoo_module_category__display_name
@@ -319,11 +318,6 @@ msgid "Followers"
 msgstr ""
 
 #. module: yodoo_apps_database
-#: model:ir.model.fields,field_description:yodoo_apps_database.field_yodoo_module__message_channel_ids
-msgid "Followers (Channels)"
-msgstr ""
-
-#. module: yodoo_apps_database
 #: model:ir.model.fields,field_description:yodoo_apps_database.field_yodoo_module__message_partner_ids
 msgid "Followers (Partners)"
 msgstr ""
@@ -363,7 +357,11 @@ msgid "Guess"
 msgstr ""
 
 #. module: yodoo_apps_database
-#: model:ir.model.fields,field_description:yodoo_apps_database.field_res_config_settings__id
+#: model:ir.model.fields,field_description:yodoo_apps_database.field_yodoo_module__has_message
+msgid "Has Message"
+msgstr ""
+
+#. module: yodoo_apps_database
 #: model:ir.model.fields,field_description:yodoo_apps_database.field_yodoo_module__id
 #: model:ir.model.fields,field_description:yodoo_apps_database.field_yodoo_module_author__id
 #: model:ir.model.fields,field_description:yodoo_apps_database.field_yodoo_module_category__id
@@ -436,7 +434,6 @@ msgid "Is Odoo Community Addon"
 msgstr ""
 
 #. module: yodoo_apps_database
-#: model:ir.model.fields,field_description:yodoo_apps_database.field_res_config_settings____last_update
 #: model:ir.model.fields,field_description:yodoo_apps_database.field_yodoo_module____last_update
 #: model:ir.model.fields,field_description:yodoo_apps_database.field_yodoo_module_author____last_update
 #: model:ir.model.fields,field_description:yodoo_apps_database.field_yodoo_module_category____last_update
@@ -1032,6 +1029,12 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:yodoo_apps_database.yodoo_module_form
 #: model_terms:ir.ui.view,arch_db:yodoo_apps_database.yodoo_module_serie_form
 msgid "Versions"
+msgstr ""
+
+#. module: yodoo_apps_database
+#: model_terms:ir.ui.view,arch_db:yodoo_apps_database.yodoo_module_dependency_python_form
+#: model_terms:ir.ui.view,arch_db:yodoo_apps_database.yodoo_module_dependency_python_tree
+msgid "View at PyPI"
 msgstr ""
 
 #. module: yodoo_apps_database
